<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.movie.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:id="@+id/appbar"
        tools:visibility="visible"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:minHeight="60dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="center"
                android:src="@color/black"
                android:id="@+id/backdrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways"
                app:title="@string/app_name"
                android:id="@+id/toolbar"
                app:menu="@menu/menu_detail"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        tools:visibility="visible"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/poster_detail"
                android:layout_width="200dp"
                android:layout_height="230dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_detail"
                app:layout_constraintTop_toTopOf="@+id/poster_detail" />

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_language_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_date_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_adult_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_title_detail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_language_detail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_language_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_language_detail" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/adult"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_date_detail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_date_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_detail"/>

            <TextView
                android:id="@+id/tv_popularity_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_total_detail"
                app:layout_constraintStart_toStartOf="@+id/poster_detail"
                app:layout_constraintTop_toBottomOf="@+id/poster_detail"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_total_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_average_detail"
                app:layout_constraintStart_toEndOf="@+id/tv_popularity_detail"
                app:layout_constraintTop_toTopOf="@+id/tv_popularity_detail"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_average_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_total_detail"
                app:layout_constraintTop_toTopOf="@+id/tv_total_detail"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/popularity"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/tv_popularity_detail"
                app:layout_constraintStart_toStartOf="@+id/tv_popularity_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_popularity_detail" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/tv_total_detail"
                app:layout_constraintStart_toStartOf="@+id/tv_total_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_detail" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@string/average"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/tv_average_detail"
                app:layout_constraintStart_toStartOf="@+id/tv_average_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_average_detail" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                app:layout_constraintVertical_bias="1.0"
                tools:text="TextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:visibility="gone"
        android:id="@+id/progress_bar_detail"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/content_empty"
        tools:visibility="gone"
        android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/empty_movie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="visible"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/raw_animation_empty" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>