<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favourite_menu_detail"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favourite"
        app:showAsAction="ifRoom"/>
</menu>