<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.favourite.FavouriteFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_favourite"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>